# ros2_simple_logger

./: .gitignore.orig  .goutputstream-Z4V7DY  CMakeLists.txt  README.md  package.xml  ros2_simple_loggerConfig.cmake
msg/: LoggingMessage.msg
ros2_simple_logger/: CMakeLists.txt  README.md  package.xml
ros2_simple_logger/src/ros2_simple_logger/: ConsoleColor.cpp  Logger.cpp  Logger.h  SimpleLoggerEcho.cpp  SimpleLoggerSubscriber.cpp  SimpleLoggerSubscriber.h
ros2_simple_logger/test/: test_main.cpp
ros2_simple_logger_msgs/: CMakeLists.txt  package.xml
src/: Logger.cpp
src/ros2_simple_logger/: ConsoleColor.cpp  ConsoleColor.h  Logger.cpp  Logger.h  SimpleLoggerEcho.cpp  SimpleLoggerSubscriber.cpp  SimpleLoggerSubscriber.h
test/: test_main.cpp
